src/index.css
:root {
  /* font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; */
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 17px;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#heading{

  display: flex;
  position: relative;
  width: 80%;

  padding: 16px;
  padding-bottom: 0px;

  align-items: center;
}

#title{
  color: black;
  font-size: 18px;
  font-weight: 600;
  display: inline;
}

#github{

  position: absolute;

  font-size: 16px;
  display: inline;
  right: 0px;

}

#github-logo{

  width: 25px;
  aspect-ratio: 1/1;

}

#description{

  padding-left: 16px;
  font-size: 14px;

}

.panel{

  position: absolute;

  /* border: 1px solid lightgrey; */
  /* outline: 1px solid lightgrey; */
  /* box-shadow: 0 0 2px 2px lightgrey inset; */

  padding: 16px;
  padding-bottom: 0px;
  padding-right: 0px;

  left: 0px;
  top: 0px;
  bottom: 0px;
  width: 20%;

  overflow: auto;

}

.algorithm{

  box-sizing: content-box;

  width: 80%;

  border-style: solid;
  border-width: 1px;
  border-radius: 8px;
  border-color: rgb(0, 0, 0);

  padding: 16px;
  margin-bottom: 20px;
  margin-top: 10px;

}

.selection{

  position: relative;
  width: 100%;
  height: 40px;
  margin-top: 10px;
  margin-bottom: 10px;

  align-items: center;

}

.algorithmSelection{

  position: absolute;
  left: 0px;

  padding: 8px;

  border-radius: 4px;

  font-size: 15px;
  width: 80%;

}

.infoButton{

  box-sizing: content-box;
  position: absolute;
  right: 0px;
  border-style: solid;
  border-width: 1px;

  padding: 1px;
  aspect-ratio: 1 / 1;

  width: 12%;

  font-size: 15px;
  border-radius: 100%;

}

#info{

  position: absolute;
  left: 80%;
  top: 0px;
  bottom: 0px;
  width: 18%;

  padding: 10px;
  padding-top: 40px;

  overflow: auto;
}

#implementation{

  position: absolute;
  bottom: 16px;

  width: 85%;
  padding: 4px;

  font-size: 12px;

  border-style: solid;
  border-radius: 2px;

  color: white;
  background-color: #213547;

}

#implementation:hover{

  background-color: #242424;
}

#implementation:active{


  background-color: #213547;
}

#codeContainer{

  position: absolute;
  z-index: 2;

  opacity: 0;

  left: 18%;
  right: 18%;
  top: 3%;
  bottom: 3%;

  padding: 1%;

  margin: 0px;

  overflow: auto;

  background-color: #222222;
  color: white;
  border-radius: 10px;

  pointer-events: none;
}

#close{

  box-sizing: content-box;
  position: fixed;
  top: 4.88%;
  right: 17.82%;

  aspect-ratio: 1 / 1;

  width: 2%;
  padding: 0px;

  transform: translate(-50%, -50%);

  color: white;

  border-style: solid;
  border-color: white;
  background-color:black;
  border-radius: 2px;
  border-width: 2px;

  pointer-events: all;

}

#pathHeader{

  position: relative;
  width: 80%;

  padding-right: 16px;
}

#pathTitle{

  display: inline;

}

#draw{
  box-sizing: content-box;
  position: absolute;

  right: 0px;
  height: 100%;
  width: 20%;

  border-style: solid;
  border-radius: 2px;

}

.controls{

  width: 100%;
  display: flex;

  margin-top: 15px;
}

.control{

  flex: 1 1 0;
  width: 0px;
  height : 20px;
  background-color: rgba(220, 220, 220, 0);
}

#delayHeading{
  margin-top: -15px;
  margin-left: 16px;
}

#sliderContainer{

  position: relative;

  margin-left: 16px;
  width: 80%;

}

#delaySlider{

  /* margin-left: 16px;
  width: 80%; */

  position: absolute;
  width: 100%;
}

#value{

  opacity: 0;
  pointer-events: none;
}

#delaySlider:hover + #value{

  /* opacity: 1; */

  animation-name: fadein;
  animation-timing-function: ease;
  animation-duration: 0.7s;
  animation-fill-mode: forwards;

}

@keyframes fadein{

  from{

    opacity: 0;
  }
  to{

    opacity: 1;
  }


}

.option{

  width: 100%;
  height: 100%;

}

.graphic{

  margin-left: 16px;
  margin-right: 16px;

  justify-content: center;
  align-content: center;

  display: grid;

  position: absolute;
  left: 20%;
  right: 20%;
  top: 0px;
  bottom: 0px;

  background-color: rgb(30, 30, 33);
}

#height{

  grid-template-columns: repeat(17, 5vh);
  grid-template-rows: repeat(17, 5vh);
}

#width{

  grid-template-columns: repeat(17, 5vw);
  grid-template-rows: repeat(17, 5vw);

}

.tile{

  border: 4px solid rgb(30, 30, 33);
  text-align: center;
  font-size: 12px;
  padding: 0px;
}

.tile:hover{

  background-color: lightgrey;

}

.tile:active{

  background-color: grey;
}

.tileON{

  background-color: rgb(69, 255, 199);

}

.tileON:active{

  background-color: rgb(61, 221, 173);
}

.tileALT{

  background-color: rgb(73, 197, 255);
}

.tileALT:active{

  background-color: rgb(66, 177, 228);;
}

.marker{

  background-color: rgb(255, 255, 100);
}

p {

  text-align: left;
  margin: 0px;
}

hr {

  margin-top: 25px;
  margin-bottom: 25px;

}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
  pointer-events: all;
  display: inline;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
}

button {
  /* border-radius: 8px;
  border: 1px solid transparent;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s; */

  box-sizing: content-box;
}

button:hover{

  background-color: rgb(240, 240, 240);

}

button:active{

  background-color: white;
}

.hoverable:hover{

  border-color:#646cff;
}
/* 
button:hover {
  border-color: #646cff;
} */

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

